<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mine_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mine_content_linerlayout_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:src="@mipmap/ic_mymusic_local_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="@string/local_music" />

        <TextView
            android:id="@+id/mine_content_song_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/mine_content_sings_number_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="首"
            android:textSize="@dimen/mine_content_sings_number_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/mine_content_first_line_margin_left"
            android:src="@mipmap/play_1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mine_content_linerlayout_margin"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:src="@mipmap/ic_mymusic_play_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="@string/recent_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="共11首,11首离线播放"
            android:textSize="@dimen/mine_content_sings_number_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/mine_content_second_line_margin_left"
            android:src="@mipmap/bt_recsong_module_more" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mine_content_linerlayout_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:src="@mipmap/ic_mymusic_download_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="@string/download" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="0首"
            android:textSize="@dimen/mine_content_sings_number_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/mine_content_third_line_margin_left"
            android:src="@mipmap/bt_recsong_module_more" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mine_content_linerlayout_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:src="@mipmap/ic_mymusic_ktv_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="@string/my_k" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="0首"
            android:textSize="@dimen/mine_content_sings_number_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/mine_content_fourth_line_margin_left"
            android:src="@mipmap/bt_recsong_module_more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mine_content_linerlayout_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="@string/create_list" />

        <RelativeLayout
            android:id="@+id/mine_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mine_like_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mine_content_widget_margin"
                android:src="@mipmap/ic_mymusic_like" />

            <TextView
                android:id="@+id/mine_like_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mine_content_widget_margin"
                android:layout_toRightOf="@id/mine_like_iv"
                android:text="@string/my_like_sing" />

            <TextView
                android:id="@+id/mine_like_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_toRightOf="@id/mine_like_iv"
                android:layout_below="@id/mine_like_tv"
                android:layout_margin="@dimen/mine_content_widget_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_like_tv"
                android:layout_margin="@dimen/mine_content_widget_margin"
                android:layout_toRightOf="@id/mine_like_num_tv"
                android:text="首" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/bt_recsong_module_more" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mine_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mine_content_widget_margin"
                android:src="@mipmap/ic_mymusic_add_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/mine_content_widget_margin"
                android:layout_toRightOf="@id/mine_add"
                android:text="@string/create_new_list" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/bt_recsong_module_more" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mine_content_linerlayout_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mine_content_widget_margin"
            android:text="@string/collect_list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_me" />

    </LinearLayout>
</LinearLayout>